Updated map.js, style.css, body.html and ui.js; Updated first two files to fix legend spacing, last two files include updates for public box design

--- a/web/static/style.css
+++ b/web/static/style.css
@@ -687,7 +687,8 @@ ul {
 
 .legend-group {
   padding: 5px;
-  margin-bottom: 5px;
+  margin-top: 0px; 
+  margin-bottom: 0px; 
   border-radius: 5px;
   width: 100%;
   box-sizing: border-box;
@@ -763,3 +764,10 @@ ul {
   align-items: center; 
   justify-content: flex-end; 
 }
+
+#legend-content {
+  display: flex;
+  flex-direction: column;
+}
+
+
